# TransparentML

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  mise.toml  pyproject.toml
.github/workflows/: docker-image.yml
.quarkus/cli/plugins/: quarkus-cli-catalog.json
apps/backend/: Dockerfile  backend-compose.yaml  example.env  main.py  pyproject.toml  settings.py
apps/backend/application/: experiment_service.py
apps/backend/db/: init_db.py
apps/backend/domain/: entities.py
apps/backend/domain/repositories/: experiment_repository_interface.py
apps/backend/infraestructure/: models.py  mongo_repository.py
apps/backend/infraestructure/db/: init_db.py
apps/backend/interface/: api.py
apps/backend/model/: experiment.py
apps/backend/tests/application/: test_experiment_service.py
apps/infra/: deployment.yaml  service.yaml
backend/: .factorypath  .project  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/db/: init_db.py
transparentml/: README.md  pom.xml
transparentml/experiments/: controller.py
transparentml/src/main/java/org/acme/application/: RegisterMetricUseCase.java
transparentml/src/main/java/org/acme/application/usecase/: CreateExperimentUseCase.java  RegisterMetricUseCase.java  RetrieveUserIdentity.java
transparentml/src/main/java/org/acme/domain/model/: Experiment.java  Metric.java  User.java
transparentml/src/main/java/org/acme/presentation/: ExperimentController.java  MetricController.java
transparentml/src/main/resources/: application.properties
(+7 files in other folders)
