[project]
name = "transparentml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruffus>=2.8.4",
]
